src/styles/index.scss
@import url("https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap");

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Share Tech Mono", monospace;
}

body {
    background: #191324;
    color: #fff;
    font-family: "Share Tech Mono", monospace;
}



#root {
    margin: 24px;
    display: flex;
    width: 524px;
    margin: auto;
    flex-direction: column;
    nav {
        height: 80px;
        display: flex;
        justify-content: space-between;
        align-items: center;
        h2 {
            font-weight: 100;
        }
    }
    
}

form {
    span {
        text-transform: capitalize;
        float: right;
        line-height: 40px;
    }
    fieldset {
        padding: 20px;
        margin-bottom: 24px;
    }

    legend {
        padding: 0 8px;
    }

    label {
        display: block;
        margin-bottom: 8px;
    }

    textarea {
        width: 480px;
        height: 120px;
        resize: none;
        color: #fff;
        padding: 8px;
        background: #1e162b;
        border: 1px solid #3a2c53;
    }

    button {
        height: 48px;
        color: #fff;
        padding: 0 12px;
        font-size: 18px;
        cursor: pointer;
        background: transparent;
        border: 1px solid #fff;
        margin-bottom: 20px;
    }
    button:hover {
        color: #1e162b;
        background: #ffffff;
    }
}


@media screen and (max-width: 568px) {
    #root {
        width: calc(100vw - 40px);
    }

    form {
        width: 100%;
        textarea {
            width: 100%;
        }
    }

}

